# event-stream-assignment

./: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt  run_api.sh  run_tests.sh  setup_local.sh
data/gold/: gld_aggregated_metrics.parquet
data/silver/: rejected_events.jsonl  slv_streaming_events.parquet
src/: aggregator.py  cleaner.py  pipeline.py
src/api/: dependencies.py  main.py  models.py
src/api/endpoints/: __init__.py  events.py  health.py  metrics.py
src/utils/: logger.py
tests/: test_aggregator.py  test_api.py  test_cleaner.py  test_pipeline.py
